aligned text header and footer on main page fixed form

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,14 +1,25 @@
+.wrapper {
+    margin: 0 auto;
+    width: 960px;
+    padding: 20px;
+   }
+#p1 {
+    border-top: solid;
+}
+
 p {
-   font: #777777;
+    margin-top: 40px;
+    font: #777777;
    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
 }
 
 h1 {
-    font: #4aaaa5;
+    margin-top: 40px;
+    color: #4aaaa5;
     font-family: 'Georgia', Times, Times New Roman, serif;
 }
 
-#name {
+#becky {
     float: left;
     margin-top: 1%;
     font-size: large;
@@ -17,9 +28,9 @@ h1 {
 }
 
 img {
-    height: 300px;
-    width: 300px;
-    padding: 1%;
+    height: 200px;
+    width: 200px;
+    margin-top: 40px;
     float: left;
 }
 
@@ -31,7 +42,7 @@ img {
     background-color: #4aaaa5; opacity: 0.7; filter: alpha(opacity=50);
     position: fixed;
     top: 0;
-    width: 100%;
+    width: 960px;
 }
 
 li {
@@ -49,4 +60,15 @@ li a {
 /* Change the link color to black on hover */
 li a:hover {
     background-color: #111;
+}
+
+footer {
+    background-color: #333;
+    padding: 20px;
+    color: #4aaaa5;
+    text-align: center;
+    position: fixed;
+    bottom: 0;
+    width: 960px;
+    
 }
